Update deps. Update to latest dev build of Tangem
